--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "assertive": "^1.4.1",
     "coffee-script": "^1.9.1",
-    "mocha": "^2.1.0"
+    "mocha": "^2.1.0",
+    "timekeeper": "0.0.5"
   }
 }
