--- a/package.json
+++ b/package.json
@@ -13,5 +13,16 @@
     "coffee-script": "^1.9.1",
     "mocha": "^2.1.0",
     "timekeeper": "0.0.5"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/banterability/mainspring.git"
+  },
+  "bugs": {
+    "url": "https://github.com/banterability/mainspring/issues"
+  },
+  "homepage": "https://github.com/banterability/mainspring"
 }
