--- a/package.json
+++ b/package.json
@@ -4,17 +4,13 @@
   "description": "Differences between dates in a useful format",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "jest"
   },
   "author": "Jeff Long",
   "license": "MIT",
   "devDependencies": {
-    "assertive": "^1.4.1",
-    "mocha": "^2.1.0",
-    "timekeeper": "0.0.5"
-  },
-  "directories": {
-    "test": "test"
+    "jest": "^24.9.0",
+    "timekeeper": "2.2"
   },
   "repository": {
     "type": "git",
