--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "devDependencies": {
     "jest": "^29.0.0",
-    "timekeeper": "2.3"
+    "prettier": "3.6.2",
+    "timekeeper": "2.3",
   },
   "repository": {
     "type": "git",
